mimir/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mimir
---
apiVersion: v1
kind: Pod
metadata:
  name: mimir
  namespace: mimir
  labels:
    app: mimir
spec:
  containers:
    - name: mimir
      image: grafana/mimir:latest
      args:
        - "-config.file=/etc/mimir.yaml"
        - "-target=all"
        - "-config.expand-env=true"
      ports:
        - containerPort: 9009
          name: http
      volumeMounts:
        - name: mimir-config
          mountPath: /etc/mimir.yaml
          subPath: mimir.yaml
  volumes:
    - name: mimir-config
      configMap:
        name: mimir-config
---
apiVersion: v1
kind: Service
metadata:
  name: mimir
  namespace: mimir
spec:
  type: LoadBalancer
  selector:
    app: mimir
  ports:
    - name: http
      port: 9009
      targetPort: 9009
      protocol: TCP
