mimir/ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mimir
  namespace: mimir
spec:
  type: ClusterIP
  selector:
    app: mimir
  ports:
    - name: http
      port: 9009
      targetPort: 9009
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimir
  namespace: mimir
  annotations:
    cert-manager.io/cluster-issuer: acme-nbl
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mimir.vil.nbl.sh
      secretName: mimir-tls
  rules:
    - host: mimir.vil.nbl.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mimir
                port:
                  number: 9009
